--- a/StudentManagementWebApp/packages.config
+++ b/StudentManagementWebApp/packages.config
@@ -3,6 +3,9 @@
   <package id="Antlr" version="3.5.0.2" targetFramework="net461" />
   <package id="Antlr3.Runtime" version="3.5.1" targetFramework="net461" />
   <package id="bootstrap" version="3.4.1" targetFramework="net461" />
+  <package id="Castle.Core" version="4.4.1" targetFramework="net461" />
+  <package id="Castle.Windsor" version="5.1.1" targetFramework="net461" />
+  <package id="Dapper" version="2.0.123" targetFramework="net461" />
   <package id="FluentNHibernate" version="3.1.0" targetFramework="net461" />
   <package id="Iesi.Collections" version="4.0.4" targetFramework="net461" />
   <package id="jQuery" version="3.4.1" targetFramework="net461" />
