--- a/StudentManagementWebApp/Web.config
+++ b/StudentManagementWebApp/Web.config
@@ -53,6 +53,7 @@
     </compilers>
   </system.codedom>
 	<system.web>
-		<customErrors mode="On"></customErrors>
+		<customErrors mode="Off" defaultRedirect="Error.cshtml"></customErrors>
+		<globalization culture="vi-VN" uiCulture="vi-VN"></globalization>
 	</system.web>
 </configuration>
