--- a/StudentManagementWebApp/Web.config
+++ b/StudentManagementWebApp/Web.config
@@ -53,7 +53,9 @@
     </compilers>
   </system.codedom>
 	<system.web>
-		<customErrors mode="Off" defaultRedirect="Error.cshtml"></customErrors>
+		<customErrors mode="On">
+			<error statusCode="404" redirect="~/Error/PageNotFound"/>
+		</customErrors>
 		<globalization culture="vi-VN" uiCulture="vi-VN"></globalization>
 	</system.web>
 </configuration>
