--- a/StudentManagementWebApp/StudentManagementWebApp.csproj
+++ b/StudentManagementWebApp/StudentManagementWebApp.csproj
@@ -190,6 +190,7 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Customs\CustomTable_1.css" />
     <Content Include="Data\ORM\hibernate.cfg.xml" />
     <Content Include="Data\ORM\NHibernateOld\SinhVien.hbm.xml" />
     <Content Include="favicon.ico" />
