--- a/StudentManagementWebApp/Web.config
+++ b/StudentManagementWebApp/Web.config
@@ -53,7 +53,7 @@
     </compilers>
   </system.codedom>
 	<system.web>
-		<customErrors mode="On">
+		<customErrors mode="Off">
 			<error statusCode="404" redirect="~/Error/PageNotFound" />
 		</customErrors>
 		<globalization culture="vi-VN" uiCulture="vi-VN"></globalization>
