--- a/StudentManagementWebApp/packages.config
+++ b/StudentManagementWebApp/packages.config
@@ -23,5 +23,6 @@
   <package id="NHibernate" version="5.3.11" targetFramework="net461" />
   <package id="Remotion.Linq" version="2.2.0" targetFramework="net461" />
   <package id="Remotion.Linq.EagerFetching" version="2.2.0" targetFramework="net461" />
+  <package id="WebActivatorEx" version="2.2.0" targetFramework="net461" />
   <package id="WebGrease" version="1.6.0" targetFramework="net461" />
 </packages>
