--- a/StudentManagementWebApp/packages.config
+++ b/StudentManagementWebApp/packages.config
@@ -7,6 +7,7 @@
   <package id="Castle.Windsor" version="5.1.1" targetFramework="net461" />
   <package id="Dapper" version="2.0.123" targetFramework="net461" />
   <package id="FluentNHibernate" version="3.1.0" targetFramework="net461" />
+  <package id="FontAwesome" version="4.7.0" targetFramework="net461" />
   <package id="Iesi.Collections" version="4.0.4" targetFramework="net461" />
   <package id="jQuery" version="3.4.1" targetFramework="net461" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net461" />
