--- a/StudentManagementWebApp/Web.config
+++ b/StudentManagementWebApp/Web.config
@@ -54,8 +54,9 @@
     </compilers>
   </system.codedom>
 	<system.web>
-		<customErrors mode="Off">
+		<customErrors mode="On">
 			<error statusCode="404" redirect="~/Error/PageNotFound" />
+			<error statusCode="401" redirect="~/Error/Page401" />
 		</customErrors>
 		<globalization culture="vi-VN" uiCulture="vi-VN"></globalization>
 	</system.web>
