--- a/StudentManagementWebApp/Web.config
+++ b/StudentManagementWebApp/Web.config
@@ -56,7 +56,7 @@
 	<system.web>
 		<customErrors mode="On">
 			<error statusCode="404" redirect="~/Error/PageNotFound" />
-			<error statusCode="401" redirect="~/Error/Page401" />
+			<error statusCode="401" redirect="~/Error/Unauthorized" />
 		</customErrors>
 		<globalization culture="vi-VN" uiCulture="vi-VN"></globalization>
 	</system.web>
