--- a/StudentManagementWebApp/packages.config
+++ b/StudentManagementWebApp/packages.config
@@ -13,15 +13,23 @@
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net461" />
   <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net461" />
+  <package id="Microsoft.AspNet.SignalR" version="2.4.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.SignalR.Core" version="2.4.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.SignalR.JS" version="2.4.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.SignalR.SystemWeb" version="2.4.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net461" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" targetFramework="net461" />
+  <package id="Microsoft.Owin" version="3.1.0" targetFramework="net461" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="3.1.0" targetFramework="net461" />
+  <package id="Microsoft.Owin.Security" version="3.1.0" targetFramework="net461" />
   <package id="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" version="1.11.1" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Modernizr" version="2.8.3" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net461" />
   <package id="NHibernate" version="5.3.11" targetFramework="net461" />
+  <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="popper.js" version="1.16.1" targetFramework="net461" />
   <package id="Remotion.Linq" version="2.2.0" targetFramework="net461" />
   <package id="Remotion.Linq.EagerFetching" version="2.2.0" targetFramework="net461" />
