--- a/StudentManagementWebApp/Web.config
+++ b/StudentManagementWebApp/Web.config
@@ -66,7 +66,8 @@
     </compilers>
   </system.codedom>
 	<system.web>
-		<customErrors mode="Off">
+		<!--On: When web ready for deploy | Off: Debuging mode-->
+		<customErrors mode="On">
 			<error statusCode="404" redirect="~/Error/PageNotFound" />
 			<error statusCode="401" redirect="~/Error/Unauthorized" />
 		</customErrors>
