--- a/StudentManagementWebApp/Web.config
+++ b/StudentManagementWebApp/Web.config
@@ -71,6 +71,6 @@
 			<error statusCode="404" redirect="~/Error/PageNotFound" />
 			<error statusCode="401" redirect="~/Error/Unauthorized" />
 		</customErrors>
-		<globalization culture="vi-VN" uiCulture="vi-VN"></globalization>
+		<globalization culture="vi-VN" uiCulture="vi-VN" fileEncoding="utf-8"></globalization>
 	</system.web>
 </configuration>
